--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#banner">How it works</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href=""> FAQ </a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#video-section">How it works</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#questions"> FAQ </a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#pricing">Pricing</a></li>
                 </ul>
             </div>
         </div>
@@ -575,11 +575,11 @@
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="footer-menu">
-                        <a href="#footer">home</a>
-                        <a href="#footer">testimonials</a>
-                        <a href="#footer">plans</a>
-                        <a href="#footer">blog</a>
-                        <a href="#footer">about</a>
+                        <a href="#banner">home</a>
+                        <a href="#testimo-slider">testimonials</a>
+                        <a href="#pricing">plans</a>
+                        <a href="#post">blog</a>
+                        <a href="#services">about</a>
                     </div>
                 </div>
             </div>
