--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="footer-menu">
-                        <a href="#banner">home</a>
+                        <a href="index.html">home</a>
                         <a href="#testimo-slider">testimonials</a>
                         <a href="#pricing">plans</a>
                         <a href="#post">blog</a>
